# NoDupeLabs

./: .env  .flake8  .gitattributes  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .pre-commit-config.yml  100_PERCENT_COVERAGE_IMPLEMENTATION_PLAN.md  :memory:  CHANGELOG.md  CI_CD_ACTION_GUIDE.md  CI_CD_FIX_PLAN.md  CI_FIX_SUMMARY.md  COMPLETE_DOCUMENTATION_SYSTEM_SUMMARY.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_PLAN.md  DATABASE_REFACTOR_PLAN.md  DYNAMIC_DOCUMENTATION_SUMMARY.md  LICENSE  Makefile  NoDupeLabs_Structure_Definitive.md  PERFORMANCE_IMPROVEMENTS_IMPLEMENTATION_PLAN.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PHASED_IMPROVEMENT_PLAN.md  PLUGIN_MANAGEMENT_FIXES_IMPLEMENTATION_PLAN.md  PROJECT_GUIDELINES.md  PROJECT_MAP.md  PROJECT_PLAN.md  PROJECT_REVIEW_AND_BEST_PRACTICES.md  PROJECT_STATUS.md  PROJECT_STATUS_REVIEW.md  PROJECT_SUMMARY.md  README.md  REPOSITORY_CONFIGURATION_AUDIT.md  SESSION_PROGRESS_SUMMARY.md  TESTING.md  TESTING_STRATEGY.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  TEST_PLAN.md  TIME_SYNC_PERFORMANCE_FIXES.md  (+42 more)
.clinerules/: context-window-management.md  subagents.json
.contextstream/: rules.md
.github/: dependabot.yml
.github/workflows/: README.md  ci-cd.yml  ci-comprehensive.yml  ci.yml  code-quality.yml  codeql-analysis.yml  dead-code.yml  deployment.yml  docs.yml  docstrings.yml  drata-compliance.yml  megalinter.yml  pr-validation.yml  python-testing.yml  release.yml  scorecard.yml  superlinter.yml  test.yml
.github/workflows-disabled/: code-quality.yml.disabled
.integrity/: manifest.json
Project_Plans/: .markdownlintignore  CASCADE_AUTOTUNE_INTEGRATION_PLAN.md  CI_CD_ERRORS_2025-12-18.md  PROJECT_IMPROVEMENT_PLAN.md  PROJECT_MAP.md  README.md  REFACTORING_TODO.md  TODOS.md  feature_roadmap.md  legacy_tool_information.md  legacy_vs_modern_comparison.md
Project_Plans/Architecture/: ARCHITECTURE.md
Project_Plans/Features/: COMPARISON.md
Project_Plans/Implementation/: PHASE_4_AI_ML_BACKEND_UNIFIED_PLAN.md  ROADMAP.md  TEST_COVERAGE_IMPLEMENTATION_TASK.md
Project_Plans/Legacy/: REFERENCE.md
Project_Plans/Quality/: IMPROVEMENT_PLAN.md  TEST_COVERAGE_IMPLEMENTATION_PLAN.md
Project_Plans/Specifications/: DATABASE_SCHEMA.md  FILE_METADATA_STANDARDS.md  PLUGIN_UUID_SPECIFICATION.md  PYTHON_THREADING.md  README.md  TOML_SCHEMA.md
archive/: Dangerfile  README.md  batch_test_info.py  d
archive/docs/: CLI_VALIDATION_FIX_PLAN.md  IMPROVEMENT_PLAN.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PLUGIN_DISCOVERY_ADDITIONS.py  PLUGIN_DISCOVERY_TEST_FIXES.md  PROJECT_STATUS_REVIEW.md  PR_UPDATE.md  REPOSITORY_CONFIGURATION_AUDIT.md  REPOSITORY_SECRETS.md  SECURITY.md  SESSION_PROGRESS_SUMMARY.md  TEST_FAILURE_ANALYSIS.md
archive/merge_backup/: test_api.py  test_database.py  test_deps.py  test_incremental.py  test_loader.py  test_logging.py  test_main.py  test_parallel.py  test_parallel_microbenchmark.py  test_plugin_compatibility.py  test_plugin_discovery.py  test_plugin_hot_reload.py  test_plugin_lifecycle.py  test_plugin_registry.py  test_plugins.py  test_pools.py  test_wired_integration.py
benchmarks/: benchmark_config.json  parallel_strategy_report.md  performance_benchmarks.py  threading_performance_report.md  time_sync_benchmarks.py
docs/: ADDING_COMMANDS.md  ADVANCED_USAGE.md  AI_BACKEND.md  ARCHITECTURE.md  BEGINNERS_GUIDE.md  CASCADE_API_UNIFICATION.md  CHANGELOG.md  CI_WORKFLOW_FIX_SUMMARY.md  CONTRIBUTING.md  DANGER_SETUP.md  DEEPSEEK_API_REVIEW.md  DEEPSEEK_V3.2_SETUP.md  DEPENDENCY_INJECTION.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_TODO.md  ENVIRONMENT_PROTECTION_CONFIGURATION.md  EXTENDING_BACKENDS.md  INDEX.md  INDEX_FORMAT.md  INTEGRATION_GUIDES.md  MODULARITY_PLAN.md  MODULARITY_PLAN_V2.md  OPENAPI.md  PHASES.md  PROJECT_STATUS.md  PYTHON_313_FEATURES.md  README.md  SIMILARITY.md  cascade-autotune-api-reference.md  cascade-autotune-failure-modes.md  cascade-autotune-integration.md  cascade-autotune-summary.md  implementation_plan.md  index.md  openapi.yaml
docs/adr/: ADR-001-command-registry-pattern.md  README.md  (+2 more)
megalinter-reports/: IDE-config.txt
merge_backup/: focus_chain.md  test_logging.py  test_results.xml
nodupe/: MODULE_SPECS.md  __init__.py  applier.py  archiver.py  bootstrap.py  categorizer.py  cli.py  config.py  container.py  convert_videos.py  db.py  deps.py  environment.py  exceptions.py  exporter.py  interfaces.py  logger.py  main.py  meta.json  metrics.py  mount.py  nsfw_classifier.py  planner.py  rollback.py  runtime.py  scanner.py  telemetry.py  validator.py
nodupe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
output/: index.db
plugins/: nsfw_logger.py  scan_reporter.py  startup_logger.py
scripts/: build_docs.py  check_docstrings_and_size.py  docstring_audit.py  fix_test_lints.py  generate_demo_onnx.py  install_vendored_wheels.py  rclone_upload_cleaner.py  regex_replace.py  run_nsfw_classify.py  setup_dev.sh  upgrade_or_fallback_onnxruntime.py  vendor_onnxruntime_wheel.py  vendor_requirements.py
test_media/: meta.json  readme.txt
test_media_collection/: meta.json
tests/: README.md  conftest.py  run_tests.py  test_accessibility_plugin.py  test_ai_backend.py  test_basic.py  test_cli_requirements.py  test_commands_structure.py  test_concurrency.py  test_concurrency_stress.py  test_config_presets.py  test_db_embeddings.py  test_db_writer_queue.py  test_executor_choice.py  test_ffmpeg_parsing.py  test_ffmpeg_timeout.py  test_hash_autotune.py  test_helpers.py  test_import.py  test_index_persistence.py  test_index_update.py  test_ipc_socket.py  test_logger_queue.py  test_nsfw_integration.py  test_onnx_backend.py  test_onnx_compat_backend.py  test_onnx_model_exists.py  test_plugin_manager_metrics.py  test_scanner.py  test_scanner_incremental.py  test_scanner_progress.py  test_scanner_timeouts.py  test_scanner_timer.py  test_similarity_backends.py  test_simple_compatibility.py  test_smoke_imports.py  test_threaded_hash_executor.py  test_upgrade_or_fallback.py  test_utils.py  test_vendor_manifest.py  (+5 more)
tools/: README.md  deepseek_test.py
wiki/: Home.md
(+534 files in other folders)
